force-app/main/default/objects/KGIPlansResults__c/KGIPlansResults__c.object-meta.xml
<CustomObject>
    <label>KGI_計画・実績_全社</label>
    <nameField>
        <label>KGI_計画・実績_全社名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>