force-app/main/default/objects/KGIPlansResults__c/fields/JU_RecruitmentAmount__c.field-meta.xml
<CustomField>
    <fullName>JU_RecruitmentAmount__c</fullName>
    <label>*獲得採用金額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>