force-app/main/default/objects/KGIPlansResults__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>KGI_計画・実績_全社</relationshipLabel>
    <relationshipName>KGI</relationshipName>
    <type>Lookup</type>
</CustomField>