force-app/main/default/objects/KGIPlansResults__c/fields/OppOwnerId__c.field-meta.xml
<CustomField>
    <fullName>OppOwnerId__c</fullName>
    <formula>Opportunity__r.Owner.Alias</formula>
    <label>商談所有者</label>
    <type>Text</type>
</CustomField>